# cw-trainer

./: .gitignore  CHECKLIST.md  README.md
cw-trainer/: cw-trainer.ino
cw-trainer-rewrite/: cw-trainer-rewrite.ino
cw-trainer/testing/encoder_test/: encoder_test.ino  trainer_constants.cpp
cw-trainer/testing/kg5cki_test/: kg5cki_test.ino  trainer_protocol.h
cw-trainer/testing/menu_navigation_test/: menu_navigation_test.ino  trainer_constants.h
cw-trainer/testing/placeholder_test/: placeholder_test.ino
esp32s3_wifi_companion/wifi_companion/: .cproject  .project  CMakeLists.txt  partitions.csv
esp32s3_wifi_companion/wifi_companion/main/: .cproject  CMakeLists.txt  Kconfig.projbuild  trainer_protocol.c  trainer_protocol.h  trainer_status.h  web_server.c  web_server.h  wifi_companion.c
esp32s3_wifi_companion/wifi_companion/main/spiffs_image/: index.html  main.js  style.css
esp8266_wifi_companion/: esp8266_wifi_companion.ino
flasherx_ota/: FlashTxx.c  flasherx_ota.ino
max98357a_tester/: max98357a_tester.ino
